# dankium

./: .gitignore  README.md  android_args.gn  android_args_arm64.gn  android_args_x86_64.gn  windows_args.gn  windows_args_arm64.gn  windows_args_x86_64.gn
patches/chromium/dankium/: 0001-Dankium-rebranding-script.patch  0001-Fix-build.patch  0002-Bump-minSDK-to-33.patch  0003-First-Run-Dialog-Disable.patch  0003-First-Run-Disable-Dialog.patch  0004-Add-compiler-mitigations-and-shadow-stacks.patch  0005-Disable-seed-based-field-trials.patch  0006-Disable-fetching-variations-on-android.patch  0007-Fill-battery-api-with-zero.patch  0007-Windows-installer-always-system.patch  0008-Dankium-branding-to-websites.patch  0009-Disable-preloading-by-default.patch  0010-Disable-default-metrics-and-crash-reporting.patch  0010-Update-privacy-settings-page.patch  0011-Setup-toolbar-to-default-to-google-translate.patch  0012-Disable-article-suggestions-by-default.patch  0013-Connectivity-check-with-Dankium.patch  0014-Configure-dankium.patch  0014-Connectivity-check-with-Dankium-and-turn-off-Doh.patch  0014-Dankium-Config.patch  0015-Advanced-search-settings.patch  0015-Always-enable-command-line-on-Android.patch  0015-Disable-content-feed-suggestions.patch  0015-Enable-command-line-on-non-rooted-device.patch  0016-Add-dank-and-nondank-states.patch  0016-Branding-for-desktop.patch  0016-Disable-sensors-by-default.patch  0017-Connectivity-check-with-Dankium-and-turn-of-Doh.patch  0017-Update-privacy-settings-page.patch  0018-Android-command-line-arguments.patch  0018-Fixup-settings-strings-for-branding.patch  0018-Update-privacy-settings-page.patch  0019-Block-protected-media.patch  0019-Disable-content-feed-suggestions.patch  0019-Fixup-settings-strings-for-branding.patch  0020-Block-protected-media.patch  0020-Disable-sensors-by-default.patch  0020-Setting-main-page-fixup.patch  0020-Settings-main-page-fixup.patch  0021-Settings-main-page-fixup.patch  (+107 more)
patches/chromium/dankium-noapikeys/: 0001-Disable-safe-browsing.patch  0002-Disable-signon.patch  0003-Disable-payment-support.patch
patches/chromium/eyeo-dankium/: 0001-Add-root-folder-changes-for-eyeo.patch  0001-adblock-root-folder-changes.patch  0002-adblock-components-folder.patch  0003-adblock-chrome-brower-adblock-folder.patch  0004-adblock-tools.patch  0005-adblock-third_party-blink.patch  0006-adblock-content.patch  0007-adblock-chrome-test.patch  0008-adblock-chrome-common.patch  0009-adblock-chrome-browser.patch  0010-adblock-other.patch  0011-adblock-fix-build.patch  0011-adblock-remove-list-recommender.patch  0012-adblock-disable-telemetry.patch  LICENSE  (+8 more)
website/: index.html  license.html  privacy.html  style.css  tos.html
(+11 files in other folders)
