target_os = "android"
target_cpu = "x64"
android_channel = "stable"
is_official_build = true
symbol_level = 0
disable_fieldtrial_testing_config = true
v8_jitless = true
v8_enable_webassembly = false
v8_enable_sparkplug = false
v8_enable_maglev = false
v8_enable_turbofan = false
is_cfi = true
use_cfi_cast = true
use_relative_vtables_abi = false
include_both_v8_snapshots = false
enable_remoting = true
enable_reporting = false
chrome_public_manifest_package = "app.dankium.browser"
system_webview_package_name = "app.dankium.webview"
trichrome_library_package = "app.dankium.trichromelibrary"
enable_android_secondary_abi = target_cpu == "x64"
android_static_analysis = "off"
is_high_end_android=true
enable_desktop_android_extensions=true
is_desktop_android=true